fixed logo getting cut on mobile

--- a/common/kxtion_site_lib.css
+++ b/common/kxtion_site_lib.css
@@ -50,7 +50,7 @@ tbtn+tbtn {
   text-align: center;
   font-size: var(--logo-size);
   margin: 0% auto;
-  width: 50%;
+  
   padding: 10px;
 }
 
